--- a/registration/src/main/resources/application.properties
+++ b/registration/src/main/resources/application.properties
@@ -7,9 +7,11 @@ server.port= 9191
 # spring.jpa.hibernate.ddl-auto= create
 # spring.jpa.show-sql= true
 
-spring.datasource.url=jdbc:mysql://root:ichGAtAtYkQLrDPm4Lmx@containers-us-west-152.railway.app:5760/railway
+spring.datasource.url=jdbc:mysql://root:XWA2l0LkGoGk8kz4sZcI@containers-us-west-136.railway.app:7978/railway
+
 spring.datasource.username=root
-spring.datasource.password=ichGAtAtYkQLrDPm4Lmx
+
+spring.datasource.password=XWA2l0LkGoGk8kz4sZcI
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.show_sql=true
