--- a/wallet/src/main/resources/application.properties
+++ b/wallet/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.port=1111
-spring.datasource.url=jdbc:mysql://root:ichGAtAtYkQLrDPm4Lmx@containers-us-west-152.railway.app:5760/railway
+spring.datasource.url=jdbc:mysql://root:XWA2l0LkGoGk8kz4sZcI@containers-us-west-136.railway.app:7978/railway
+
 spring.datasource.username=root
-spring.datasource.password=ichGAtAtYkQLrDPm4Lmx
+
+spring.datasource.password=XWA2l0LkGoGk8kz4sZcI
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.show_sql=true
