--- a/registration/src/main/resources/application.properties
+++ b/registration/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.port=9090
-spring.datasource.url=jdbc:mysql://localhost:3306/MutualFundsDB
+spring.datasource.url=jdbc:mysql://root:XWA2l0LkGoGk8kz4sZcI@containers-us-west-136.railway.app:7978/railway
+
 spring.datasource.username=root
-spring.datasource.password=SYSTEM
+
+spring.datasource.password=XWA2l0LkGoGk8kz4sZcI
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.show_sql=true
