--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -15,5 +15,10 @@ spring:
       uri: lb://search-function-service
       predicates:
        - Path=/mutualfund/**
-  
+       
+   - id: registration
+     uri: lb://registration
+     predicates:
+      - Path=/customer/**
+       
 
