--- a/jwtauthentication/src/main/resources/application.properties
+++ b/jwtauthentication/src/main/resources/application.properties
@@ -8,12 +8,11 @@ server.port=9596
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # spring.jpa.show-sql= true
 
+spring.datasource.url=jdbc:mysql://tech-mutual.czbdrgtkozjs.us-east-1.rds.amazonaws.com/mutualfundsdb
 
-spring.datasource.url=jdbc:mysql://root:XWA2l0LkGoGk8kz4sZcI@containers-us-west-136.railway.app:7978/railway
+spring.datasource.username=admin
 
-spring.datasource.username=root
-
-spring.datasource.password=XWA2l0LkGoGk8kz4sZcI
+spring.datasource.password=admin123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.show_sql=true
