--- a/search/src/main/resources/application.properties
+++ b/search/src/main/resources/application.properties
@@ -2,11 +2,11 @@
 server.port=8896
 
 #database
-spring.datasource.url=jdbc:mysql://root:XWA2l0LkGoGk8kz4sZcI@containers-us-west-136.railway.app:7978/railway
+spring.datasource.url=jdbc:mysql://tech-mutual.czbdrgtkozjs.us-east-1.rds.amazonaws.com/mutualfundsdb
 
-spring.datasource.username=root
+spring.datasource.username=admin
 
-spring.datasource.password=XWA2l0LkGoGk8kz4sZcI
+spring.datasource.password=admin123
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
