--- a/wallet/src/main/resources/application.properties
+++ b/wallet/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=1111
-spring.datasource.url=jdbc:mysql://root:XWA2l0LkGoGk8kz4sZcI@containers-us-west-136.railway.app:7978/railway
+spring.datasource.url=jdbc:mysql://tech-mutual.czbdrgtkozjs.us-east-1.rds.amazonaws.com/mutualfundsdb
 
-spring.datasource.username=root
+spring.datasource.username=admin
 
-spring.datasource.password=XWA2l0LkGoGk8kz4sZcI
+spring.datasource.password=admin123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.show_sql=true
