--- a/mutualFundTransactions/src/main/resources/application.properties
+++ b/mutualFundTransactions/src/main/resources/application.properties
@@ -25,9 +25,11 @@
 
 
 server.port=5151
-spring.datasource.url=jdbc:mysql://localhost:3306/MutualFundsDB
-spring.datasource.username=root
-spring.datasource.password=SYSTEM
+spring.datasource.url=jdbc:mysql://tech-mutual.czbdrgtkozjs.us-east-1.rds.amazonaws.com/mutualfundsdb
+
+spring.datasource.username=admin
+
+spring.datasource.password=admin123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.show_sql=true
