--- a/mutualFundTransactions/src/main/resources/application.properties
+++ b/mutualFundTransactions/src/main/resources/application.properties
@@ -1,35 +1,11 @@
 ##port
 #server.port=5151
 #
-##database
-#spring.datasource.url=jdbc:mysql://root:XWA2l0LkGoGk8kz4sZcI@containers-us-west-136.railway.app:7978/railway
-#
-#spring.datasource.username=root
-#
-#spring.datasource.password=XWA2l0LkGoGk8kz4sZcI
-#
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-#
-#spring.jpa.hibernate.ddl-auto = update
-#
-#spring.jpa.properties.hibernate.show_sql=true
-#
-#spring.jpa.properties.hibernate.format_sql=true
-#
-#spring.application.name=mutualfunt-transaction-service
-#
-##eureka.instance.hostname=localhost
-#
-##spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-
-
 
 server.port=5151
-spring.datasource.url=jdbc:mysql://tech-mutual.czbdrgtkozjs.us-east-1.rds.amazonaws.com/mutualfundsdb
-
-spring.datasource.username=admin
-
-spring.datasource.password=admin123
+spring.datasource.url=jdbc:mysql://root:XWA2l0LkGoGk8kz4sZcI@containers-us-west-136.railway.app:7978/railway
+spring.datasource.username=root
+spring.datasource.password=XWA2l0LkGoGk8kz4sZcI
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.show_sql=true
