--- a/registration/src/main/resources/application.properties
+++ b/registration/src/main/resources/application.properties
@@ -1,16 +1,8 @@
 server.port=6161
 #
-spring.datasource.url=jdbc:mysql://tech-mutual.czbdrgtkozjs.us-east-1.rds.amazonaws.com/mutualfundsdb
-
-spring.datasource.username=admin
-
-spring.datasource.password=admin123
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/MutualFundsDB
-#
-#spring.datasource.username=root
-#
-#spring.datasource.password=noor
+spring.datasource.url=jdbc:mysql://root:XWA2l0LkGoGk8kz4sZcI@containers-us-west-136.railway.app:7978/railway
+spring.datasource.username=root
+spring.datasource.password=XWA2l0LkGoGk8kz4sZcI
 
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
