--- a/registration/src/main/resources/application.properties
+++ b/registration/src/main/resources/application.properties
@@ -29,9 +29,9 @@ spring.jpa.properties.hibernate.show_sql=true
 
 spring.jpa.properties.hibernate.format_sql=true
 
-#spring.application.name=registration
+spring.application.name=registration
 
-#eureka.instance.hostname=localhost
+eureka.instance.hostname=localhost
 
 #spring.data.jpa.repositories.generate-ddl = fals
 #spring.data.jpa.repositories.enabled=false
