--- a/registration/src/main/resources/application.properties
+++ b/registration/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 server.port=6161
 #
-spring.datasource.url=jdbc:mysql://root:XWA2l0LkGoGk8kz4sZcI@containers-us-west-136.railway.app:7978/railway
-
+spring.datasource.url=jdbc:mysql://root:xAi5N3FRzWkcpv3zEHcI@containers-us-west-129.railway.app:7781/railway
 spring.datasource.username=root
-
-spring.datasource.password=XWA2l0LkGoGk8kz4sZcI
+spring.datasource.password=xAi5N3FRzWkcpv3zEHcI
 
 #spring.datasource.url=jdbc:mysql://tech-mutual.czbdrgtkozjs.us-east-1.rds.amazonaws.com/mutualfundsdb
 #
