--- a/search/src/main/resources/application.properties
+++ b/search/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 server.port=8896
 
 #database
-spring.datasource.url=jdbc:mysql://root:XWA2l0LkGoGk8kz4sZcI@containers-us-west-136.railway.app:7978/railway
+spring.datasource.url=jdbc:mysql://root:xAi5N3FRzWkcpv3zEHcI@containers-us-west-129.railway.app:7781/railway
 spring.datasource.username=root
-spring.datasource.password=XWA2l0LkGoGk8kz4sZcI
+spring.datasource.password=xAi5N3FRzWkcpv3zEHcI
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
