--- a/wishlist/src/main/resources/application.properties
+++ b/wishlist/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=5152
-spring.datasource.url=jdbc:mysql://tech-mutual.czbdrgtkozjs.us-east-1.rds.amazonaws.com:3306/mutualfundsdb
-spring.datasource.username=admin
-spring.datasource.password=admin123
+spring.datasource.url=jdbc:mysql://root:xAi5N3FRzWkcpv3zEHcI@containers-us-west-129.railway.app:7781/railway
+spring.datasource.username=root
+spring.datasource.password=xAi5N3FRzWkcpv3zEHcI
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.show_sql=true
