--- a/registration/src/main/resources/application.properties
+++ b/registration/src/main/resources/application.properties
@@ -57,20 +57,47 @@ eureka.instance.hostname=localhost
 
 #elastic.email.api.key=your_elasticemail_api_ke
 # SMTP server host
-spring.mail.host=smtp.elasticemail.com
+#spring.mail.host=smtp.elasticemail.com
+#
+## SMTP server port
+#spring.mail.port=2525
+#
+## SMTP server username
+#spring.mail.username=fundfusion.mf@gmail.com
+#
+## SMTP server password
+#spring.mail.password=87C9396EE7C7BD33A17FD6167AE658B46881
+#
+## Additional properties
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
 
-# SMTP server port
-spring.mail.port=2525
 
-# SMTP server username
-spring.mail.username=fundfusion.mf@gmail.com
+spring.mail.port=587
 
-# SMTP server password
-spring.mail.password=87C9396EE7C7BD33A17FD6167AE658B46881
+spring.mail.host=smtp.googlemail.com
 
-# Additional properties
-spring.mail.properties.mail.smtp.auth=true
+spring.mail.username=mfu.project321@gmail.com
+
+spring.mail.password=gxlsacjhnlabsasw
+
+spring.mail.protocol=smtp
+
+spring.mail.defaultEncoding=UTF-8
+
+ 
+
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.mail.properties.mail.smtp.auth = true
+
+spring.mail.properties.mail.smtp.socketFactory.port = 25
+
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+
+spring.mail.properties.mail.smtp.socketFactory.fallback = true
+
+spring.mail.properties.mail.smtp.ssl.enable=false
 
 
 
