--- a/jwtauthentication/src/main/resources/application.properties
+++ b/jwtauthentication/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.port=9596
-spring.datasource.url=jdbc:mysql://root:xAi5N3FRzWkcpv3zEHcI@containers-us-west-129.railway.app:7781/railway
-spring.datasource.username=root
-spring.datasource.password=xAi5N3FRzWkcpv3zEHcI
+spring.datasource.url=jdbc:mysql://tech-mutual.czbdrgtkozjs.us-east-1.rds.amazonaws.com/mutualfundsdb
+
+spring.datasource.username=admin
+
+spring.datasource.password=admin123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.show_sql=true
