--- a/search/src/main/resources/application.properties
+++ b/search/src/main/resources/application.properties
@@ -2,9 +2,11 @@
 server.port=8896
 
 #database
-spring.datasource.url=jdbc:mysql://root:xAi5N3FRzWkcpv3zEHcI@containers-us-west-129.railway.app:7781/railway
-spring.datasource.username=root
-spring.datasource.password=xAi5N3FRzWkcpv3zEHcI
+spring.datasource.url=jdbc:mysql://tech-mutual.czbdrgtkozjs.us-east-1.rds.amazonaws.com/mutualfundsdb
+
+spring.datasource.username=admin
+
+spring.datasource.password=admin123
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
