--- a/wishlist/src/main/resources/application.properties
+++ b/wishlist/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.port=5152
-spring.datasource.url=jdbc:mysql://root:xAi5N3FRzWkcpv3zEHcI@containers-us-west-129.railway.app:7781/railway
-spring.datasource.username=root
-spring.datasource.password=xAi5N3FRzWkcpv3zEHcI
+spring.datasource.url=jdbc:mysql://tech-mutual.czbdrgtkozjs.us-east-1.rds.amazonaws.com/mutualfundsdb
+
+spring.datasource.username=admin
+
+spring.datasource.password=admin123
 #spring.datasource.url=jdbc:mysql://localhost:3306/MutualFundsDB
 #spring.datasource.username=root
 #spring.datasource.password=SYSTEM
