--- a/jwtauthentication/src/main/resources/application.properties
+++ b/jwtauthentication/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:mysql://tech-mutual.czbdrgtkozjs.us-east-1.rds.amazon
 spring.datasource.username=admin
 
 spring.datasource.password=admin123
+spring.datasource.hikari.maximum-pool-size=7
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.show_sql=true
