--- a/registration/src/main/resources/application.properties
+++ b/registration/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.username=admin
 
 spring.datasource.password=admin123
 
+spring.datasource.hikari.maximum-pool-size=7
 #spring.datasource.url=jdbc:mysql://tech-mutual.czbdrgtkozjs.us-east-1.rds.amazonaws.com/mutualfundsdb
 #
 #spring.datasource.username=admin
