--- a/search/src/main/resources/application.properties
+++ b/search/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.datasource.username=admin
 
 spring.datasource.password=admin123
 
+spring.datasource.hikari.maximum-pool-size=7
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.hibernate.ddl-auto = update
