--- a/wishlist/src/main/resources/application.properties
+++ b/wishlist/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:mysql://tech-mutual.czbdrgtkozjs.us-east-1.rds.amazon
 spring.datasource.username=admin
 
 spring.datasource.password=admin123
+spring.datasource.hikari.maximum-pool-size=7
 #spring.datasource.url=jdbc:mysql://localhost:3306/MutualFundsDB
 #spring.datasource.username=root
 #spring.datasource.password=SYSTEM
